Fixed 7.6.0 release notes

--- a/articles/cyclecloud/release-notes/7-6-0.md
+++ b/articles/cyclecloud/release-notes/7-6-0.md
@@ -1,5 +1,5 @@
 ---
-title: Azure CycleCloud Release Notes v7.5.5 | Microsoft Docs
+title: Azure CycleCloud Release Notes v7.6.0 | Microsoft Docs
 description: Product release notes for Azure CycleCloud v7.6.0
 services: azure cyclecloud
 author: adriankjohnson
@@ -12,7 +12,7 @@ ms.author: adjohnso
 
 # Release Notes
 
-This production release fixes a number of issues and includes some great new features: Windows full disk encryption, nodes can now be stopped and restarted from the UI, a large number of accessibility improvements, and many others.
+This production release adds support for Windows full disk encryption and stopping (deallocating) nodes from the UI. In addition, it includes a large number of accessibility improvements and fixes a number of issues.
 
 ## New Features:
  * Windows full disk encryption is now supported
