Squashed commit of the following:
commit cbde23d5b3eed54e72cb9a54c31f42102e1cde6b
Author: bwatrous <ben.watrous@microsoft.com>
Date:   Tue Jan 7 17:47:25 2025 -0800

    Added CycleCloud 8.7.0 Release Notes (#425)

commit 2d1e105662455f2fe1de747e0945e7caeb5eed70
Author: Vinil Vadakkepurakkal <82436391+vinil-v@users.noreply.github.com>
Date:   Mon Jan 6 21:15:31 2025 +0530

    updating the cloud bursting docs with latest info (#411)

    * updating the docs with latest info

    Updating the cyclecloud slurm bursting document and images

    * updating links and details & toc

    * Update slurm-cloud-bursting-setup.md

    Updating some details for Centralized user management and network ports

    * Update slurm-cloud-bursting-setup.md

    NFS server details updated

    * updating the relative paths and diagram

    * Updated ms.date

    ---------

    Co-authored-by: Padmalatha Somashiandan <107439713+Padmalathas@users.noreply.github.com>

commit cf47be53fd37cf16f11f9b65f622dc50fd0f7c4e
Author: Xavier Pillons <xpillons@microsoft.com>
Date:   Mon Dec 16 15:31:01 2024 +0100

    Latest release notes for CCWS (#420)

    * Latest release notes for CCWS

    * fix wrong links

commit 2d2c528447b162506a7c393529b68b1181614c7c
Author: Doug Clayton <873842+dougclayton@users.noreply.github.com>
Date:   Mon Dec 9 13:38:36 2024 -0500

    Add information on port 9443 SSL (#417)

    * Add information on port 9443 SSL

    ---------

    Co-authored-by: Doug Clayton <doclayto@microsoft.com>

commit a36b7eaae9f376e874c66426432fbdebdc6a78b6
Author: Doug Clayton <873842+dougclayton@users.noreply.github.com>
Date:   Mon Dec 9 12:14:01 2024 -0500

    Factor out role definition into separate file and make it complete (#412)

    Co-authored-by: Doug Clayton <doclayto@microsoft.com>

commit f5e3d91d99f89800eba8479089e4318ec4308a23
Author: bwatrous <ben.watrous@microsoft.com>
Date:   Fri Dec 6 11:03:15 2024 -0800

    Update CycleCloud News with 8.6.5 version (#416)

commit 5b1b

--- a/articles/cyclecloud/release-notes/ccws/2024.09.18.md
+++ b/articles/cyclecloud/release-notes/ccws/2024.09.18.md
@@ -48,10 +48,5 @@ This release contains the following new features:
 
 ## Known issues in this release
 
-- When deleting the resource group or the CycleCloud VM, role assignments at the subscription level are not automatically removed. To resolve this, use the `delete_roles.sh` utility script.
-- **Azure US Gov Only**: Marketplace deployment validation failed due to an incorrect API version. To mitigate this, deploy using the CLI.
-
-## Next steps
-
-* [What is Azure CycleCloud Workspace for Slurm?](../../overview-ccws.md)
-* [Deploy Azure CycleCloud Workspace for Slurm](../../how-to/ccws/plan-your-deployment.md)
+- When deleting the resource group or the CycleCloud VM, role assignments at the subscription level are not automatically removed. To resolve this see [How to clean up roles using the CLI](../../how-to/ccws/cleanup-roles.md).
+- **Azure US Gov Only**: Marketplace deployment validation failed due to an incorrect API version. To mitigate this, [How to deploy a CycleCloud Workspace for Slurm environment using the CLI](../../how-to/ccws/deploy-with-cli.md).
