--- a/articles/azure-resource-manager/bicep/diagnostics/bcp338.md
+++ b/articles/azure-resource-manager/bicep/diagnostics/bcp338.md
@@ -1,12 +1,12 @@
 ---
-title: Bicep diagnostic code - BCP338
-description: Understand the, "Failed to evaluate parameter <parameter-name>," error.
+title: BCP338
+description: Failed to evaluate parameter <parameter-name>.
 ms.topic: reference
-ms.date: 01/06/2025
+ms.date: 01/10/2025
 ms.custom: devx-track-bicep
 ---
 
-# Bicep diagnostic code - BCP338
+# BCP338
 
 This diagnostic occurs when Bicep can't resolve a parameter name in a Bicep parameters file.
 
@@ -24,14 +24,14 @@ Check the value of the parameter.
 
 ## Examples
 
-The following _main.bicep_ Bicep parameters file produces the error because the 'testEnvironmentVariable' environment variable can't be found:
+The following Bicep parameters file produces the error because the 'testEnvironmentVariable' environment variable can't be found:
 
 ```bicep
 using 'main.bicep'
 param parTest = readEnvironmentVariable('testEnvironmentVariable')
 ```
 
-It could be because the environment variable isn't defined at the user or system level. You can fix the error by assigning a string whose length is within the allowable range. For more information, see the [`readEnvironmentVariable()` function](../bicep-functions-parameters-file.md#readenvironmentvariable).
+It could be because the environment variable isn't defined at the user or system level. For more information, see the [`readEnvironmentVariable()` function](../bicep-functions-parameters-file.md#readenvironmentvariable).
 
 ## Next steps
 
